--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,54 @@
  *= require_self
  *= require_tree .
  */
+#banner {
+ background: #9c9;
+ padding: 10px;
+ border-bottom: 2px solid;
+ font: small-caps 40px/40px "Times New Roman", serif;
+ color: #282;
+ text-align: center;
+}
+ 	#banner.img {
+ 	 float: left;
+ 	}
+
+#columns{
+	 background: #140;
+}
+
+#notice {
+ color: #000 !important;
+ border: 2px solid red;
+ padding: 1em;
+ margin-bottom: 2em;
+ background-color: #f0f0f0;
+ font: bold smaller sans-serif;
+}
+
+
+#side {
+ float: left;
+ padding: 1em 2em;
+ width: 1em;
+
+ 	ul {
+ 	 padding: 0;
+ 
+		li {
+ 		 list-style: none;
+ 
+ 		    a {
+			 color: #bfb;
+ 			 font-size: small;
+ 			}
+		}
+ 	}
+}
+
+
+#main {
+ margin-left: 15em;
+ padding: 1em;
+ background: white;
+}
