--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shop</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <title>Pragprog Books Online Store</title>
+  <%= stylesheet_link_tag "application", media: "all",
+  "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", 
+  "data-turbolinks-track" => true %>
+  <%= csrf_meta_tag %>
 </head>
-<body class='<%= controller.controller_name %>'>
 
-<%= yield %>
+<body class="<%= controller.controller_name %>">
+  <div id="banner">
+  <%= image_tag("logo.png") %>
+  <%= @page_title || "Pragmatic Bookshelf" %>
+  </div>
+  <div id="columns">
 
+  <div id="side">
+  <ul>
+  	<li><a href="http://www....">Главная</a></li>
+  	<li><a href="http://www..../faq">Оплата</a></li>
+  	<li><a href="http://www..../news">Доставка</a></li>
+  	<li><a href="http://www..../contact">Контакты</a></li>
+  </ul>
+  </div>
+
+  <div id="main">
+  	<%= yield %>
+  </div>
+  
+  </div>
 </body>
 </html>
