--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,3 @@
-<% unless cart.line_items.empty? %>
 <h2>Your Cart</h2>
 <table>
 <%= render(cart.line_items) %>
@@ -8,6 +7,6 @@
  <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
  </tr>
 </table>
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to 'Empty cart', cart, method: :delete,
  				data: { confirm: 'Are you sure?' } %>
-<% end %>
